# clip-forge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
installer/: ClipForge.iss  clipforge.spec  release-notes-v1.0.1.md  release-notes-v1.0.3.md
resources/presets/: instagram_reels.json  plain_slice.json  tiktok_hard.json  tiktok_soft.json  youtube_shorts.json
resources/themes/: m0.qss
scripts/: build_icon.py  e2e_pipeline.py  fetch_ffmpeg.py  run_and_screenshot.py  screenshot_app.py
src/clipforge/: __init__.py  __main__.py  app.py  cli.py  constants.py  i18n.py  job_runner.py  version.py  widgets.py
src/clipforge/core/: __init__.py  effects.py  exceptions.py  filters.py  models.py  planner.py  presets.py
src/clipforge/infra/: __init__.py  ffmpeg.py  ffprobe.py  paths.py
tests/: conftest.py
tests/unit/: test_cli_plan.py  test_fetch_ffmpeg.py  test_no_qt_imports.py  test_smoke.py
tests/unit/core/: test_effects.py  test_filters.py  test_models.py  test_planner.py  test_presets.py
