[project]
name = "clipforge"
version = "0.0.1-dev"
description = "Desktop app that slices long-form video into short clips with configurable uniqualization effects."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Yurii Ostapchuk", email = "yurii.ostapchuk@softigo.sk" },
]
dependencies = [
    "pyside6>=6.8.0",
    "qtawesome>=1.3.0",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "platformdirs>=4.3.0",
    "humanize>=4.10.0",
]

[project.scripts]
clipforge = "clipforge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clipforge"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pyinstaller>=6.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["resources/ffmpeg"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PT011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["build/", "dist/", "resources/"]

[[tool.mypy.overrides]]
module = ["PySide6.*", "qtawesome.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["clipforge.app"]
# PySide6 ships no stubs; suppress errors that arise from untyped Qt bases.
disable_error_code = ["misc", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src/clipforge --cov-report=term-missing --cov-branch"
markers = [
    "qt: requires Qt event loop",
    "integration: integration tests that touch FFmpeg or filesystem",
]
qt_api = "pyside6"

[tool.coverage.run]
branch = true
source = ["src/clipforge"]
omit = ["src/clipforge/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
